--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "HRTech",
   "version": "1.0.0",
   "description": "HRTech tickets App",
+  "main": "Gruntfile.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/JeanEspindola/HRTech.git"
