--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "angular-ui-router": "0.2.15",
     "fontawesome": "*",
     "font-awesome": "*",
-    "moment": "2.10.6"
+    "moment": "2.10.6",
+    "roboto-fontface": "~0.8.0"
   },
   "resolutions": {
     "angular": "1.5.0"
